--- a/src/style.css
+++ b/src/style.css
@@ -1,12 +1,3 @@
-#app {
-  font-family: Avenir, Helvetica, Arial, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  text-align: center;
-  color: #2c3e50;
-  margin-top: 60px;
-}
-
 header {
   padding: 60px;
   font-size: 30px;
@@ -16,6 +7,7 @@ header {
 #images {
   background: #fff;
   display: flex;
+  flex-wrap: wrap;
   margin: 0;
   align-items: center;
   justify-content: center;
@@ -45,7 +37,7 @@ header {
 }
 
 canvas {
-  box-shadow: inset 0 0 1px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: inset 0 0 2px 0 rgba(0, 0, 0, 0.2);
   height: 320px;
   width: 320px;
   background-size: cover;
