--- a/src/boids/style.css
+++ b/src/boids/style.css
@@ -1,4 +1,43 @@
+:root {
+  --light-gray: #cdcdcd;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: Avenir, Helvetica, Arial, sans-serif;
+  text-align: center;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+}
+
+header {
+  width: 100%;
+  padding: 1rem 0;
+  background: var(--light-gray);
+  font-size: clamp(1rem, 2vw + 1rem, 4rem);
+  font-weight: bold;
+}
+
+.simulation {
+  display: flex;
+  margin: 1em auto;
+}
+
+.simulation > .controls {
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+}
+
+.simulation > .controls > * {
+  margin: 0.5em 1em;
+}
+
 canvas {
-  background: #cdcdcd;
+  background: var(--light-gray);
   border: 1px solid black;
 }
